<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ################ -->
    <!-- Common -->
    <!-- ################ -->
    <string name="app_name">UltimateLineManager</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="handler">Handler</string>
    <string name="middle">Middle</string>
    <string name="sexe">Sexe</string>
    <string name="name">Name</string>
    <string name="boy">Men</string>
    <string name="girl">Woman</string>
    <string name="erreur_generique">An technical error has occurred</string>
    <string name="not_implemented">Not yet implemented</string>
    <string name="point">Point</string>
    <string name="points">Points</string>
    <string name="stat">Statistics</string>
    <string name="injured">Injured</string>

    <!-- ################ -->
    <!-- Menu générique -->
    <!-- ################ -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About UltimateLineManager</string>

    <!-- ################ -->
    <!-- Select team -->
    <!-- ################ -->
    <string name="st_title">Select team</string>
    <string name="st_menu_add">New Team</string>
    <string name="st_ask_team_name">Team name* : </string>
    <string name="st_ask_competition_name">Tournament name : </string>
    <string name="st_same_player_than">Start with same players than a other tournament\n(You can add or remove
        player after) : </string>
    <string name="st_team_not_add">Team hasn\'t been added</string>
    <string name="st_no_team">No team registered</string>


    <!-- ****************** -->
    <!-- TeamActvity -->
    <!-- ****************** -->
    <string name="ta_bt_players">Players</string>
    <string name="ta_bt_games">Matches</string>
    <string name="ta_bt_rename">Rename Team</string>
    <string name="ta_bt_delete">Delete Team</string>
    <string name="ta_bt_switch_team">Switch Team</string>
    <string name="ta_no_match">No match registered</string>
    <string name="ta_delete_confirmation">Are you sure you want to delete this team?</string>
    <string name="ta_edit_player">Edit player</string>
    <string name="ta_delete_player_text">Remove player from the team ?</string>
    <string name="ta_delete_player_refused">You can\'t delete player who played at least one point.</string>

    <!-- ****************** -->
    <!-- ListPlayerTeam -->
    <!-- ****************** -->
    <string name="lpt_title">Players of %1$s</string>
    <string name="lpt_no_team_title">Existing Players</string>
    <string name="lpt_no_team_info">Add players of the database or create a new one.</string>
    <string name="lpt_bt_new">New Player</string>
    <string name="lpt_no_player">No player registered</string>
    <string name="lpt_post">Post</string>
    <string name="lpt_number">Number</string>
    <string name="lpt_player_exist">Player already exist</string>
    <string name="lpt_delete_player">Delete player</string>
    <string name="lpt_delete_player_text">Delete player from the database?</string>
    <string name="lpt_delete_player_refused">You can\'t delete a player who played in a team.\n%1$s</string>

    <!-- ****************** -->
    <!-- TeamMatchActivity -->
    <!-- ****************** -->
    <string name="tm_list_statut"><![CDATA[Statut : <font color=\'%1$s\'>%2$s</font>]]></string>
    <string name="tm_list_statut_not_start">Not started</string>
    <string name="tm_list_statut_in_progress">In progress</string>
    <string name="tm_list_statut_finish">Finished</string>
    <string name="tm_menu_add">New match</string>
    <string name="tm_pop_up_new_match_title">Opponent\'s team name</string>

    <!-- ****************** -->
    <!-- MatchActivity -->
    <!-- ****************** -->
    <string name="ma_title">%1$s vs %2$s</string>
    <string name="ma_statut">Statut : </string>
    <string name="ma_date">Date : </string>
    <string name="ma_playing_time">Playing time : </string>
    <string name="ma_reel_playing_time">Reel playing time : </string>
    <string name="ma_score">Score : </string>
    <string name="ma_menu_state_player">State players</string>
    <string name="ma_menu_rename_opponent">Rename opponent</string>
    <string name="ma_menu_delete_match">Delete game</string>
    <string name="ma_menu_end_match">Finish game</string>
    <string name="ma_bloc_title">Summary</string>
    <string name="ma_delete_game_question">Do you really want to delete this game ?</string>
    <string name="ma_delete_game_confirmation">The match has been deleted</string>
    <string name="ma_end_game_point_in_progress_message">To finish the game, finish the current point.</string>

    <!-- ****************** -->
    <!-- ListPointActivity -->
    <!-- ****************** -->
    <string name="lp_title">%1$s vs %2$s</string>
    <string name="lp_bloc_tittle">Point %1$s</string>
    <string name="lp_players">Players : </string>
    <string name="lp_show_players">Show players</string>
    <string name="lp_hide_players">Hide players</string>
    <string name="lp_delete_point">Delete point</string>
    <string name="lp_menu_new_point">New Point</string>
    <string name="lp_no_point">No point registered</string>

    <!-- ****************** -->
    <!-- PointActivity -->
    <!-- ****************** -->
    <string name="pa_title">(P%3$s)%1$s vs %2$s</string>
    <string name="pa_fille">Women : </string>
    <string name="pa_boy">Mens : </string>
    <string name="pa_handler">Handler : </string>
    <string name="pa_middle">Middle : </string>
    <string name="pa_both">Both : </string>
    <string name="pa_previous_point">Previous point</string>
    <string name="pa_next_point">Next point</string>
    <string name="pa_new_point">New point</string>
    <string name="pa_delete_point">Delete point</string>

    <!-- ****************** -->
    <!-- LivePoint -->
    <!-- ****************** -->
    <string name="lp_offense">Start offense</string>
    <string name="lp_defense">Start defense</string>
    <string name="lp_goal_us">Goal us</string>
    <string name="lp_goal_opponent">Goal opponent</string>
    <string name="lp_manage_players">Current point</string>
    <string name="lp_minimize">Minimize</string>
    <string name="lp_open">open</string>
    <string name="lp_no_player">No player set for this point.</string>
    <string name="lp_bt_next_point">Next Point</string>
    <string name="lp_bt_previous_point">Previous Point</string>

    <!-- ****************** -->
    <!-- Statistic -->
    <!-- ****************** -->
    <string name="stat_title">Statistics</string>
    <string name="stat_playing_time">Playing time : </string>
    <string name="stat_playing_time_value">%2$s point(s) / %1$smin</string>
    <string name="stat_goal_attaque">Attaque (goal/number) : </string>
    <string name="stat_goal_attaque_value">%1$s / %2$s</string>
    <string name="stat_goal_defense">Defense (goal/number)  : </string>
    <string name="stat_goal_defense_value">%1$s / %2$s</string>
    <string name="stat_lucky">Lucky player : </string>
    <string name="stat_unlucky">Unlucky player : </string>
    <string name="stat_lucky_mail">Lucky player : </string>
    <string name="stat_unlucky_mail">Unlucky player : </string>
    <string name="stat_send_mail">Send by mail</string>
    <string name="stat_defense_word">Defense</string>
    <string name="stat_offense_word">Offense</string>
    <string name="stat_win_word">Win</string>

    <!-- ****************** -->
    <!-- Exception -->
    <!-- ****************** -->
    <string name="player_alreay_add">Player already added</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_list_points">ListPointsActivity</string>

</resources>
