<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.ultimatelinemanager.activity.match.MatchActivity">


    <item
        android:id="@+id/mm_new_point"
        android:icon="@drawable/ic_add_white_48dp"
        android:orderInCategory="100"
        android:title="@string/lp_menu_new_point"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/mm_state_player"
        android:icon="@drawable/ic_group_white_48dp"
        android:orderInCategory="100"
        android:title="@string/ma_menu_state_player"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/mm_end_game"
        android:orderInCategory="102"
        android:title="@string/ma_menu_end_match"
        app:showAsAction="never"/>

    <item
        android:id="@+id/mm_delete_game"
        android:orderInCategory="103"
        android:title="@string/ma_menu_delete_match"
        app:showAsAction="never"/>

    <item
        android:id="@+id/mm_rename_opponent"
        android:orderInCategory="104"
        android:title="@string/ma_menu_rename_opponent"
        app:showAsAction="never"/>

    <item
        android:id="@+id/mm_stat"
        android:icon="@drawable/ic_equalizer_white_48dp"
        android:orderInCategory="105"
        android:title="@string/stat"
        app:showAsAction="never"/>

</menu>
