<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/margin_10">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/np_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"

        android:ems="10"


        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="@dimen/font_13"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/lpt_post"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <CheckBox
        android:id="@+id/np_cb_handler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:text="@string/handler"/>

    <CheckBox
        android:id="@+id/np_cb_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:text="@string/middle"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/sexe"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/np_rg_sexe"
        android:layout_marginLeft="@dimen/margin_10">

        <RadioButton
            android:id="@+id/np_rb_boy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/boy"/>

        <RadioButton
            android:id="@+id/np_rb_girl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/girl"/>
    </RadioGroup>
</LinearLayout>