<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2"
        android:background="?attr/color_login_et_separator"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_5"
        android:paddingLeft="@dimen/margin_10"
        android:paddingRight="@dimen/margin_10"
        android:paddingTop="@dimen/margin_5">

        <TextView
            android:id="@+id/lp_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="France 3 -  2 Espagne"/>

        <Chronometer
            android:id="@+id/lp_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2"
        android:background="?attr/color_login_et_separator"
        />

    <RelativeLayout
        android:id="@+id/lp_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <Button
            android:id="@+id/lp_bt_defense"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/standard_height"
            android:text="@string/lp_defense"
            android:textAllCaps="false"
            android:textColor="?attr/color_text_main"
            android:textSize="@dimen/font_14"/>

        <Button
            android:id="@+id/lp_bt_offense"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/standard_height"
            android:layout_below="@+id/lp_bt_defense"
            android:text="@string/lp_offense"
            android:textAllCaps="false"
            android:textColor="?attr/color_text_main"
            android:textSize="@dimen/font_14"/>

        <View
            android:id="@+id/lp_center"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/lp_iv_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lp_bt_offense"
            android:layout_alignLeft="@+id/lp_center"
            android:layout_alignTop="@+id/lp_bt_defense"
            android:padding="@dimen/margin_10"
            android:src="@drawable/play"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lp_tv_minimize"
            style="@style/button_textview_material_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lp_minimize"/>

        <TextView
            android:id="@+id/lp_tv_manage_player"
            style="@style/button_textview_material_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15"
            android:text="@string/lp_manage_players"/>


    </LinearLayout>
</LinearLayout>