<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/margin_10">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_10"
                android:text="@string/st_ask_team_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/font_14"/>

            <EditText
                android:id="@+id/nt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_10"
                android:text="@string/st_ask_competition_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/font_14"/>

            <EditText
                android:id="@+id/nt_competition_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/st_same_player_than"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/font_13"/>

    <NumberPicker
        android:id="@+id/nt_team_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_12"/>

</LinearLayout>